<resources>
    <string name="app_name">Dividend Calendar</string>

    <string name="empty_stock_view">Please enter a ticker to add\n<u>Only U.S. companies can search.</u></string>
    <string name="input_ticker_hint">please enter ticker(ex: AAPL)</string>
    <string name="not_find_selected_ticker">not find selected ticker</string>
    <string name="please_check_internet">please check internet</string>

    <string name="dividend">dividend</string>
    <string name="ticker_name">ticker name</string>
    <string name="stock_count">stock count</string>
    <string name="confirm">confirm</string>
    <string name="add">add</string>
    <string name="modify">modify</string>
    <string name="cancel">cancel</string>
    <string name="delete">delete</string>
    <string name="question">question</string>
    <string name="setting">setting</string>
    <string name="ex_date_day">exDividendDate</string>
    <string name="payment_date_day">PayDate</string>

    <string name="input_ticker">please enter ticker</string>
    <string name="company_format">(%s) %s</string>

    <string name="item_ex_date_day">exDividendDate :</string>
    <string name="item_ex_date_day_cnt">exDividendDate cnt :</string>
    <string name="item_payment_date_day">payDate :</string>
    <string name="item_my_stock_cnt">stock cnt :</string>
    <string name="item_price_of_one_stock">price per stock :</string>
    <string name="item_frequency">frequency :</string>

    <string name="item_stock_date_format">payDate : %s / exDividendDate : %s</string>
    <string name="item_my_stock_cnt_format">stock cnt : %s</string>
    <string name="item_frequency_format">frequency : %s</string>

    <string name="ex_date_noting_yet">exDividendDate Undetermined</string>
    <string name="payment_date_noting_yet">payDate Undetermined</string>
    <string name="not_has_dividend_info">No dividend information</string>
    <string name="app_info">It is an app that you can check the dividend date and payment date of your stock at a glance through the calendar.</string>

    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>

    <string name="ok">ok</string>
    <string name="total_dividend_explain">This is total dividend of current month\n(stock dividend * stock count)</string>
    <string name="total_dividend_monthly">average monthly dividend : $%s</string>

    <string name="latest_version">Latest Version</string>
    <string name="need_update">Need Update</string>

    <string name="hint_input_search_ticker">please enter company or ticker</string>
    <string name="complete_emoji">⎷</string>
    <string name="direct_input">Add Direct</string>
    <string name="notice">notice</string>

    <string name="previous_close">Previous Close</string>
    <string name="week_52_high">52week high</string>
    <string name="week_52_low">52week low</string>
</resources>