<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <!-- tool bar -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/calendar_bar_size"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/tvViewCalendarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="current"
            android:textColor="@color/white"
            android:textSize="14dp" />

        <ImageView
            android:id="@+id/btnViewCalendarPrev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@+id/tvViewCalendarTitle"
            android:src="@drawable/ic_arrow_left_white_24dp" />

        <ImageView
            android:id="@+id/btnViewCalendarNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/tvViewCalendarTitle"
            android:src="@drawable/ic_arrow_right_white_24dp" />

        <Button
            android:id="@+id/btnCalendarType"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@color/cardview_dark_background"
            android:textAllCaps="false"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:textSize="10dp"
            android:textColor="@color/white"
            tools:text="@string/payment_date_day" />

    </RelativeLayout>


    <!-- cal header -->
    <LinearLayout
        android:id="@+id/llViewCalendarHeader"
        android:layout_width="match_parent"
        android:layout_height="@dimen/calendar_header_size"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sun"
            android:textColor="@color/black"
            android:textSize="14dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/mon"
            android:textColor="@color/black"
            android:textSize="14dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tue"
            android:textColor="@color/black"
            android:textSize="14dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/wed"
            android:textColor="@color/black"
            android:textSize="14dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/thu"
            android:textColor="@color/black"
            android:textSize="14dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/fri"
            android:textColor="@color/black"
            android:textSize="14dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sat"
            android:textColor="@color/black"
            android:textSize="14dp" />

    </LinearLayout>

    <!-- days view -->
    <GridView
        android:id="@+id/gvViewCalendar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:numColumns="7" />

</LinearLayout>